--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Julio, Omar, Shannon, Neto</title>
+    <title>Julio, Omar, Shannon, Neto, Diego</title>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
